# emoji-archiver

./: Cargo.toml  readme.md
src/: main.rs
