[package]
name = "emoji-archiver"
version = "0.1.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.10"
structopt = "0.3"
tokio = {version = "0.2", features = ["macros"]}

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model"]
version = "0.9.3"
